[package]
name = "nrrd-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", features = ["extern_crate_alloc"] }
bzip2 = "0.6.0"
flate2 = { version = "1.1.2", default-features = false, features = ["rust_backend"] }
num-traits = "0.2.19"
regex = "1.11.1"
sprintf = "0.4.2"
